[package]
name = "ciphercanvas"
version = "0.2.1"
edition = "2021"
license = "GPL-3.0"
categories = ["command-line-utilities"]
keywords = ["command-line", "cli", "qrcode"]
readme = "README.md"
repository = "https://github.com/walker84837/ciphercanvas-rs"

[profile.dev]
debug = false

[profile.release]
strip = true
lto = true
overflow-checks = true
panic = "abort"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5.1", features = ["derive"] }
image = "0.24.9"
log = "0.4.21"
qrcode = "0.12"
resvg = "0.40.0"
simple_logger = "5.0.0"
tiny-skia = "0.11.4"
toml = "0.8"
usvg = "0.40.0"
